# quicpipe

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: client.rs  config.rs  endpoint.rs  error.rs  lib.rs  main.rs  migration.rs  server.rs  stream.rs  tests.rs
tests/: cli.rs
