[package]
name = "quicpipe"
version = "0.2.1"
edition = "2024"
readme = "README.md"
keywords = ["cli", "network"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage"] }
hex = { version = "0.4" }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tokio = { version = "1.34", default-features = false, features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "signal", "net"] }
tokio-util = { version = "0.7", default-features = false }

# QUIC
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23" , default-features = false, features = ["ring"] }
rcgen = { version = "0.14", default-features = false, features = ["ring"] }
if-addrs = "0.15"

[dev-dependencies]
duct = "1.1"
nix = { version = "0.31", features = ["signal", "process"] }
tempfile = "3.8"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"
